--- a/_14_eshop/example-2-mono-repo/eshop_gw/configs/eshop_gw.yml
+++ b/_14_eshop/example-2-mono-repo/eshop_gw/configs/eshop_gw.yml
@@ -57,13 +57,6 @@ grpcClient:
     enableLoadBalance: true      # whether to turn on the load balancer
 
 
-httpClient:
-  - name: "flashSale"    # grpc service name, used for service discovery
-    host: "127.0.0.1"            # grpc service address, used for direct connection
-    port: 30680                   # grpc service port
-    registryDiscoveryType: ""    # registration and discovery types: consul, etcd, nacos, if empty, connecting to server using host and port
-
-
 # logger settings
 logger:
   level: "info"             # output log levels debug, info, warn, error, default is debug
@@ -77,27 +70,13 @@ logger:
     #isCompression: true    # Whether to compress/archive old files (default is false)
 
 
-# set database configuration. reference-db-config-url
-database:
-  driver: "mysql"           # database driver
-  # mysql settings
-  mysql:
-    # dsn format,  <username>:<password>@(<hostname>:<port>)/<db>?[k=v& ......]
-    dsn: "root:123456@(192.168.3.37:3306)/account?parseTime=true&loc=Local&charset=utf8,utf8mb4"
-    enableLog: true         # whether to turn on printing of all logs
-    maxIdleConns: 10        # set the maximum number of connections in the idle connection pool
-    maxOpenConns: 100       # set the maximum number of open database connections
-    connMaxLifetime: 30     # sets the maximum time for which the connection can be reused, in minutes
-
-
-
-# redis settings
-redis:
-  # dsn format, [user]:<pass>@127.0.0.1:6379/[db], the default user is default, redis version 6.0 and above only supports user.
-  dsn: "default:123456@192.168.3.37:6379/0"
-  dialTimeout: 10           # connection timeout, unit(second)
-  readTimeout: 2            # read timeout, unit(second)
-  writeTimeout: 2           # write timeout, unit(second)
+## redis settings
+#redis:
+#  # dsn format, [user]:<pass>@127.0.0.1:6379/[db], the default user is default, redis version 6.0 and above only supports user.
+#  dsn: "default:123456@192.168.3.37:6379/0"
+#  dialTimeout: 10           # connection timeout, unit(second)
+#  readTimeout: 2            # read timeout, unit(second)
+#  writeTimeout: 2           # write timeout, unit(second)
 
 
 # jaeger settings
